# esesaetsch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  clippy.toml  host_key  release-please-config.json  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: install-linux-arm-deps.sh
.github/workflows/: ci.yml  release-assets.yml  release-packages.yml  release-please.yml
crates/esesätsch/: Cargo.toml
crates/esesätsch-core/: Cargo.toml
crates/esesätsch-core/src/: auth.rs  cert.rs  config.rs  crypto.rs  error.rs  hostkey.rs  lib.rs  logging.rs  pty.rs  server.rs  session.rs
crates/esesätsch-core/tests/: auth.rs  cert.rs  config_defaults.rs  config_merge.rs  config_parse.rs  config_validate.rs  crypto.rs  crypto_negotiation.rs  error.rs  hostkey_generate.rs  hostkey_load.rs  hostkey_load_or_generate.rs  logging.rs  pty.rs  server.rs  session.rs
crates/esesätsch-core/tests/common/: mod.rs
crates/esesätsch/src/: main.rs  real_auth.rs  real_pty.rs  service.rs
crates/esesätsch/tests/: cli.rs
docs/: development.md  index.md
docs/user-guide/: cli-reference.md  configuration.md
examples/: README.md  cert-auth.toml  full.toml  minimal.toml  password.toml  pubkey-only.toml
media/: README.md
packaging/: README.md  nfpm.yaml
packaging/config/: esesaetsch.toml
packaging/macos/: com.esesaetsch.server.plist  distribution.xml
packaging/macos/scripts/: postinstall
packaging/scripts/: postinstall.sh  postremove.sh  preremove.sh
packaging/systemd/: esesaetsch.service
packaging/windows/: main.wxs
