[workspace]
resolver = "2"
members = ["crates/esesätsch-core", "crates/esesätsch"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/BentBr/esesaetsch"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
todo        = "deny"
unimplemented = "deny"
module_name_repetitions = "allow"
missing_errors_doc      = "allow"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror   = "1"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
clap        = { version = "4", features = ["derive"] }
russh       = "0.45"
russh-keys  = "0.45"
ssh-key     = { version = "0.6", features = ["ed25519", "rsa", "alloc", "p256", "p384", "rand_core", "getrandom", "std"] }
rand        = "0.8"
subtle      = "2"
tempfile    = "3"
assert_cmd  = "2"
predicates  = "3"
