[workspace]
resolver = "2"
members = ["crates/esesätsch-core", "crates/esesätsch"]

[workspace.package]
# `version` is intentionally NOT inherited via the workspace — release-please's
# `rust` strategy expects `[package].version` directly in each member's
# Cargo.toml, so each crate carries its own version and they stay in lock-step
# by being updated together via release-please's `extra-files` list.
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/BentBr/esesaetsch"

[workspace.lints.rust]
# Unsafe is denied by default but may be opted into per-module with an
# explicit `#![allow(unsafe_code)]` and a justifying comment. Required
# for thin OS-FFI wrappers (e.g., LogonUserW on Windows).
unsafe_code = "deny"

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
todo        = "deny"
unimplemented = "deny"
module_name_repetitions = "allow"
missing_errors_doc      = "allow"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror   = "2"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
clap        = { version = "4", features = ["derive"] }
russh       = "0.60"
# russh 0.60 vendors its keys module (`russh::keys`); no separate
# russh-keys crate. We still depend on `ssh-key` 0.6 directly because
# it has a friendlier RNG-and-`Algorithm`-typed `PrivateKey::random` we
# use for host-key generation, and its `Certificate::builder` powers the
# test-side cert generation. PEM is wire-stable across both crates.
ssh-key     = { version = "0.6", features = ["ed25519", "rsa", "alloc", "p256", "p384", "rand_core", "getrandom", "std"] }
rand        = "0.8"
subtle      = "2"
tempfile    = "3"
assert_cmd  = "2"
predicates  = "3"
portable-pty = "0.9"
tokio-util   = { version = "0.7", features = ["io"] }
nix          = { version = "0.31", features = ["signal", "process", "user"] }
nonstick     = "0.1"   # safe PAM bindings; uses libpam-sys (stable)
plist        = "1"
windows      = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Threading",
] }
