[package]
name        = "esesaetsch-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Core library for the esesätsch SSH server (protocol, auth, config, session)."

[lints]
workspace = true

[dependencies]
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
clap        = { workspace = true }
russh       = { workspace = true }
russh-keys  = { workspace = true }
rand        = { workspace = true }
subtle      = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
