[package]
name        = "esesaetsch-core"
version     = "0.2.0"   # kept in lock-step with crates/esesätsch by release-please
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Core library for the esesätsch SSH server (protocol, auth, config, session)."

[lints]
workspace = true

[dependencies]
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
russh       = { workspace = true }
ssh-key     = { workspace = true }
subtle      = { workspace = true }

[dev-dependencies]
rand        = { workspace = true }
tempfile    = { workspace = true }
