[package]
name        = "esesaetsch"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "The esesätsch SSH server binary."

[[bin]]
name = "esesaetsch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
esesaetsch-core = { path = "../esesätsch-core" }
anyhow      = { workspace = true }
clap        = { workspace = true }
tracing     = { workspace = true }
toml        = { workspace = true }

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
tempfile    = { workspace = true }
