[package]
name        = "esesaetsch"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "The esesätsch SSH server binary."

[[bin]]
name = "esesaetsch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
esesaetsch-core = { path = "../esesätsch-core" }
anyhow         = { workspace = true }
clap           = { workspace = true }
portable-pty   = { workspace = true }
russh          = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
toml           = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
pam = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
plist = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[features]
# OS-native password authentication via PAM on Unix. Requires libclang
# at build time (for the underlying `pam-sys` bindgen step). Most CI
# images already include it; macOS dev machines may need:
#     brew install llvm
# Linux dev:
#     sudo apt-get install libpam0g-dev libclang-dev
default = []
pam-auth = ["dep:pam"]

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
tempfile    = { workspace = true }
