[package]
name        = "esesaetsch"
version     = "0.1.0"   # kept in lock-step with crates/esesätsch-core by release-please
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "The esesätsch SSH server binary."

[[bin]]
name = "esesaetsch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
esesaetsch-core = { path = "../esesätsch-core" }
anyhow         = { workspace = true }
clap           = { workspace = true }
portable-pty   = { workspace = true }
russh          = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
toml           = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
# PAM is a hard dependency on Unix. The underlying `pam-sys` crate uses
# `bindgen` at build time, which needs `libclang`.
#   macOS:  comes with `xcode-select --install`. If the build still can't
#           find `libclang.dylib`, set
#           `LIBCLANG_PATH=/Library/Developer/CommandLineTools/usr/lib`.
#   Debian/Ubuntu: `sudo apt-get install -y libpam0g-dev libclang-dev`.
nonstick = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
plist = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
tempfile    = { workspace = true }
